2019-01-22  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_line_section): Check we are not at end of
	line data when reading parameters for unknown opcodes.

2019-01-20  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_line_section): Check terminating NUL byte
	for dir and file tables.

2019-01-16  Mark Wielaard  <mark@klomp.org>

	* readelf (handle_core_note): Pass desc to ebl_core_note.

2018-11-10  Mark Wielaard  <mark@klomp.org>

	* elflint.c (check_program_header): Allow PT_GNU_EH_FRAME segment
	to be matched against SHT_X86_64_UNWIND section.

2018-11-09  Mark Wielaard  <mark@klomp.org>

	* strip.c (remove_debug_relocations): Check if section is gnu
	compressed and decompress and recompress it.

2018-11-12  Mark Wielaard  <mark@klomp.org>

	* elflint.c (check_note_data): Recognize NT_GNU_BUILD_ATTRIBUTE_OPEN
	and NT_GNU_BUILD_ATTRIBUTE_OPEN.
	* readelf.c (handle_notes_data): Handle
	ELF_NOTE_GNU_BUILD_ATTRIBUTE_PREFIX. Pass nhdr.n_namesz to
	ebl_object_note.

2018-11-11  Mark Wielaard  <mark@klomp.org>

	* readelf.c (handle_notes_data): Pass n_descsz to
	ebl_object_note_type_name.
	* elflint.c (check_note_data): Recognize NT_VERSION, add owner
	name to unknown note error.

2018-10-20  Mark Wielaard  <mark@klomp.org>

	* readelf.c (process_elf_file): Use dwelf_elf_begin to open pure_elf.

2018-10-26  Mark Wielaard  <mark@klomp.org>

	* strip.c (OPT_RELOC_DEBUG_ONLY): New define.
	(options): Add reloc-debug-sections-only.
	(reloc_debug_only): New static bool.
	(main): Check reloc_debug_only is the only strip option used.
	(parse_opt): Handle OPT_RELOC_DEBUG_ONLY.
	(handle_debug_relocs): New function.
	(handle_elf): Add local variables lastsec_offset and lastsec_size.
	Handle reloc_debug_only.

2018-10-24  Mark Wielaard  <mark@klomp.org>

	* strip.c (handle_elf): Extract code to update shdrstrndx into...
	(update_shdrstrndx): ... this new function.

2018-10-24  Mark Wielaard  <mark@klomp.org>
